# esque

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Esque.toml  GUIDELINES.md  LICENSE  Makefile  README.md  TODO  debug.gdb  initramfs.tar  rust-toolchain  winy.ps1  y.py
.github/workflows/: CI.toml  linux.yml
.targets/: README.md
.targets/riscv/: boot.json  kernel.json  kernel.lds
.targets/x86_64/: apps.json  apps.lds  boot.json  kernel.json  kernel.lds
Documentation/: hal_ipc.md  initfs.md  printing.md  syscall.md
apps/: README.md  new-app.sh
apps/esqrc/: .initramfs  Cargo.toml
apps/initfs/: Makefile
binaries/OVMF/: OVMF_CODE.fd  OVMF_VARS.fd
binaries/efi-shell/: startup.nsh
bindings/c/: esqbase.h  esys.h
boot/: Cargo.toml  Makefile
boot/src/: main.rs
boot/src/handover/: mod.rs
crates/: README.md
crates/bks/: Cargo.toml  README.md
crates/comasm/: Cargo.toml
crates/enum-with-options/: Cargo.toml
crates/enumtastic/: Cargo.toml
crates/esqdev/: Cargo.toml
crates/esqdrv/: Cargo.toml
crates/esqmod/: Cargo.toml
crates/esqtest/: Cargo.toml
crates/esqtest-derive/: Cargo.toml
crates/esys/: Cargo.toml
crates/esyscall-support/: Cargo.toml
crates/ffi/: Cargo.toml
crates/keyboard-layout/: Cargo.toml
crates/match-tree/: Cargo.toml
crates/num-backed/: Cargo.toml
crates/pci-lookup/: Cargo.toml
crates/strutil/: Cargo.toml
crates/tar/: Cargo.toml
crates/tar/src/: header.rs  lib.rs  tar.rs  types.rs
crates/unique/: Cargo.toml
crates/volatile/: Cargo.toml
esq/: Cargo.toml
esq/src/: main.rs
executive/: Makefile
executive/initfs/: Cargo.toml  Makefile
executive/objector/: Cargo.toml  Makefile
hal/: Cargo.toml
initramfs/: .INITRAMFS  esqrc  initfs
kernel/: Cargo.toml  Makefile  build.rs
kernel/.cargo/: config.toml
kernel/src/: common.rs  config.rs  env.rs  error.rs  log.rs  main.rs  math.rs  panic.rs  test.rs
kernel/src/acpi/: #mod.rs#  .#mod.rs  acpi_base.rs  config.rs  mod.rs
kernel/src/arch/x86_64/: main.rs  mod.rs  segment.rs  syscall.rs
kernel/src/arch/x86_64/gdt/: mod.rs
kernel/src/arch/x86_64/init/: gdt.rs  interrupts.rs  memory.rs  mod.rs  pic.rs  pit.rs  smp.rs  syscall.rs  userspace.rs
kernel/src/arch/x86_64/interrupts/: exceptions.rs  idt.rs  interrupt_frame.rs  mod.rs
kernel/src/arch/x86_64/paging/: page_frame_allocator.rs  page_table_manager.rs  paging.s
kernel/src/arch/x86_64/scheduler/: pit.rs
kernel/src/arch/x86_64/structures/: addr.rs  frame.rs  mod.rs  space.rs
kernel/src/arch/x86_64/tss/: mod.rs
kernel/src/device/: kernel.rs  mod.rs  traits.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/input/: mod.rs  ps2.rs  ps2_keyboard.rs  ps2_mouse.rs
kernel/src/framebuffer/: mod.rs
kernel/src/gdt/: gdt.s  mod.rs
kernel/src/heap/: mod.rs
kernel/src/init/: acpi.rs  common.rs  config.rs  gdt.rs  heap.rs  interrupts.rs  memory.rs  mod.rs  pic.rs  pit.rs  smp.rs  syscall.rs  userspace.rs
kernel/src/initramfs/: mod.rs
kernel/src/interrupts/: exceptions.rs  idt.rs  interrupt_frame.rs  mod.rs  register.rs
kernel/src/iobus/: mod.rs  msr.rs
kernel/src/ipc/: message.rs  mod.rs
kernel/src/memory/: allocator.rs  bitmap.rs  memset.rs  mod.rs  page_frame_allocator.rs  pageframeallocator.rs  paging.rs  structures.rs  userspace.rs
kernel/src/memory/paging/: mod.rs  page_frame_allocator.rs  page_table_manager.rs  paging.s
kernel/src/memory/structures/: addr.rs  frame.rs  mod.rs  space.rs
kernel/src/pci/: mod.rs
kernel/src/pic/: mod.rs
kernel/src/scheduler/: mod.rs  pit.rs
kernel/src/smp/: mod.rs
kernel/src/stratagem/: mod.rs  traits.rs
kernel/src/syscall/: mod.rs  syscall.s
kernel/src/syscall/safe/: mod.rs
kernel/src/tests/: alloc.rs  bounds.rs  env.rs  mod.rs
kernel/src/userspace/: launchpad.rs  mod.rs  pid.rs  process.rs  signal.rs  syscall.rs  syscall.s
lib/bindings/: README.md
lib/esque/: Cargo.toml  README.md
lib/estd/: README.md
modules/initfs/: Cargo.toml
ports/: README.md
scripts/: cloc.sh  unsafe-counter.sh
scripts/builder/: #builder.py#  builder.py  cargo.py  cliparser.py  config.py  json_handler.py  parser.py  subcommands.py  util.py
www/: crates.js  index.html  search-index.js  settings.html  source-files.js
(+655 files in other folders)
