[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version= "0.16.1", features = ["exts"] }
log = { version = "0.4.14", default-features = false }
uefi-services = { version ="0.13.1" }
xmas-elf = "0.8.0"
bks = { path = "../crates/bks" }
collect_slice = { git = "https://github.com/visionizer/collect_slice" }
tar-no-std = "0.1.6"
