[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.26.0"
log = { version = "0.4.14", default-features = false }
uefi-services = "0.23.0"
xmas-elf = "0.8.0"
bks = { path = "../crates/bks" }
collect_slice = { git = "https://github.com/visionizer/collect_slice" }
tar-no-std = "0.1.6"
