cargo-features = [ "strip" ]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bks = { path = "../crates/bks" }
spin = "0.9.2"
bitflags = "1.3.2"
rlibc = "1.0.0"
enum-with-options = { path = "../crates/enum-with-options" }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"