cargo-features = [ "strip" ]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bks = { path = "../crates/bks" }
spin = "0.9.2"
bitflags = "1.3.2"
rlibc = "1.0.0"
enumtastic = { path = "../crates/enumtastic" }
volatile = { path = "../crates/volatile" }
keyboard-layout = { path = "../crates/keyboard-layout" }
tar = { path = "../crates/tar" }
esqdev = { path = "../crates/esqdev" }
unique = { path = "../crates/unique" }
esqdrv = { path = "../crates/esqdrv" }
strutil = { path = "../crates/strutil" }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"
