[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bks = { path = "../crates/bks" }
spin = "0.9.2" # Will never be dropped
bitflags = "1.3.2" # Will never be dropped
rlibc = { version = "1.0.0", optional = true } # Will be dropped
enumtastic = { path = "../crates/enumtastic" }
volatile = { path = "../crates/volatile" }
keyboard-layout = { path = "../crates/keyboard-layout" }
tar = { path = "../crates/tar" }
esqmod = { path = "../crates/esqmod" }
unique = { path = "../crates/unique" }
esqdrv = { path = "../crates/esqdrv" }
static_assertions = "1.1.0" # Will never be dropped
esys = { path = "../crates/esys" } # System Calls + IPC
esqtest =  { path = "../crates/esqtest" }
comasm = { path = "../crates/comasm" }
pci-lookup = { path = "../crates/pci-lookup" }
bit_field = "0.10.1"
num-backed = { path = "../crates/num-backed" }
esyscall-support = { path = "../crates/esyscall-support" } 

[features]
harsh-tests = [] # Exit on Failure of a test
default = ["rlibc"]