[package]
name = "tar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumtastic = { path = "../enumtastic" }
arrayvec = { version = "0.7.2", default-features = false } # REMOVE: Dependency is useless